--- a/config/final.yml
+++ b/config/final.yml
@@ -1,6 +1,7 @@
 ---
 name: rabbitmq-metrics-emitter
 blobstore:
-  provider: local
+  provider: s3
   options:
-    blobstore_path: final_blobs
+    bucket_name: rabbitmq-metrics-boshrelease
+    region: us-east-1
