--- a/releases/rabbitmq-metrics-emitter/index.yml
+++ b/releases/rabbitmq-metrics-emitter/index.yml
@@ -1,4 +1,6 @@
 builds:
+  11969453-0f87-4e0a-5f0d-ca0aa57f5629:
+    version: 0.4.0
   856f708d-3ac2-4dd2-4814-dfe7945c3c74:
     version: 0.3.0
   8619b1a5-e3ec-4384-7d7f-9a49f658c3c0:
